--- a/claim_prediction.css
+++ b/claim_prediction.css
@@ -14,6 +14,7 @@ img{
     height: 7%;
     border-radius: 60%;
     border: 1px solid black;
+    display: none;
 }
 
 
@@ -93,6 +94,8 @@ img{
     padding: 5%;
 
 }
+
+
 
 #input{
     margin: 1%;
